# GravityNotes

./: AGENTS.md  GEMINI.md  package-lock.json
.codex/environments/: environment.toml
.github/workflows/: quality-gate.yml
Gravity/: .prettierignore  editor-entry.js  editor.bundle.js  editor.html  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
Gravity/chunks/: chunk-56MWWIUF.js  dist-57J3CMPD.js
Gravity/src/: App.css  App.tsx  main.tsx
Gravity/src-tauri/: Cargo.toml  tauri.conf.json
Gravity/src-tauri/capabilities/: default.json
Gravity/src-tauri/src/: lib.rs  main.rs
Gravity/src/codemirror/: checkboxPlugin.ts  decorationBuilder.ts  markdownDecorations.ts
Gravity/src/components/: CodeMirrorEditor.tsx  EditorPane.tsx  MarkdownPreview.tsx  NoteEditor.tsx  NoteList.tsx  NoteListErrorBoundary.tsx  PaneContainer.tsx  markdownPreviewCheckboxes.ts
Gravity/src/editor/: checkboxParser.ts  spellCheck.ts  spellLinter.ts  taskList.ts  techWords.ts  undoRedo.ts
Gravity/src/services/: notesService.ts  (+1 more)
Gravity/tests/: appLaunch.test.tsx  appRefreshFallback.test.tsx  appTagPersistence.test.tsx  checkboxParser.test.ts  editorBehavior.test.ts  frontmatter.test.ts  markdownPreview.test.tsx  noteEditorCheckboxes.test.tsx  noteEditorFind.test.tsx  noteEditorFrontmatter.test.tsx  noteListContextMenu.test.tsx  noteListErrorBoundary.test.tsx  noteListState.test.ts  notesService.test.ts  paneReducer.test.ts  saveController.test.ts  sidebarRender.test.tsx  taskList.test.ts  templateFlows.test.ts
(+15 files in other folders)
